[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://sfx/Cave Theme.ogg" type="AudioStream" id=2]
[ext_resource path="res://sfx/Dungeon Ambience.ogg" type="AudioStream" id=3]
[ext_resource path="res://sfx/GetKey.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/GetCoin.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/DoorUnlock.wav" type="AudioStream" id=6]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -9.73648
margin_top = -9.47296
margin_right = 340.264
margin_bottom = 180.527
color = Color( 0.0509804, 0.054902, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 162, 84 )
current = true

[node name="Tween" type="Tween" parent="."]

[node name="Container" type="Node2D" parent="."]
z_index = 10

[node name="Fader" type="ColorRect" parent="Container"]
modulate = Color( 0, 0, 0, 0 )
margin_right = 325.0
margin_bottom = 170.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[node name="GetKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[node name="GetCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[node name="DoorUnlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sfx"
